k8s/depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-depl
  namespace: notes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes
  template:
    metadata:
      labels:
        app: notes
    spec:
      containers:
      - name: notes
        image: himanshww/notes-app
        ports:
        - containerPort: 8000
