k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: notes-service
  namespace: notes-app
spec:
  selector:
    app: notes
  ports:
  - port: 8000
    targetPort: 8000
