k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-app-ingress
  namespace: notes-app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - test.to
      secretName: demo-tls
  rules:
    - host: test.to
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notes-service
                port:
                  number: 8000
